// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container overview 0 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-r9zh5k"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1og4qso"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1vy8qzg"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-kx3w25"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-r9zh5k"
  >
    Container text
  </div>
</DocumentFragment>
`;
